<resources>
    <string name="app_name">MultithreadingTask</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="asynctask">AsyncTask</string>
    <string name="loader">Loader</string>
    <string name="async_query_handler">Async Query Handler</string>
    <string name="handler_thread">Handler Thread</string>
    <string name="handler">Handler</string>
    <string name="intent_service">Intent Service</string>
    <string name="thread_pool_executor">Thread Pool Executor</string>
</resources>
